--- a/nvd-client/src/components/review/review.css
+++ b/nvd-client/src/components/review/review.css
@@ -1,175 +1,7 @@
-.feedback {
-    font-family: var(--primary-font), sans-serif;
+.review-star-icon-active svg{
+  fill: yellow;
+  cursor: pointer;
 }
-.feedback-btn {
-    background-color: var(--secondary-color) !important;
-    color: var(--primary-color) !important;
+.yellow svg{
+fill:yellow;
 }
-.feedback-container {
-    background-color: #0c2b4b;
-    border-radius: 15px 0px 15px 0px;
-    padding: 20px;
-}
-.feedback-btn:hover {
-    background-color: var(--primary-color) !important;
-    color: var(--secondary-color) !important;
-    transition: 0.5s;
-}
-.fa-star
-{
-    color: var(--secondary-color);
-    letter-spacing: 5px;
-}
-.feedback-inner-text {
-    font-family: var(--primary-font), sans-serif;
-}
-.feedback-bio-img img {
-    border-radius: 50%;
-    height: 80px;
-    width: 80px;
-}
-.feedback-name {
-    font-size: 15px;
-}
-.feedback-name-info {
-    color: var(--secondary-color);
-    font-size: 13px;
-}
-.feedback-quote-icon {
-  /*  color: #FFFFFF26; */
-    color: #f3bd00;
-    float: right;
-    font-size: 40px;
-    margin-top: -50px;
-}
-
-/* feedback animation */ 
-
-
-.icon-cards {
-    position: relative;
-    width: 60vw;
-    height: 50vw;
-    max-width: 380px;
-    max-height: 250px;
-    margin: 0;
-    color: white;
-    perspective: 400px;
-    transform-origin: center;
-    margin-top: 80px;
-  }
-  .icon-cards__content {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    transform-origin: center;
-    transform-style: preserve-3d;
-    transform: translateZ(-30vw) rotateY(0);
-    -webkit-animation: carousel 15s infinite cubic-bezier(0.77, 0, 0.175, 1) forwards;
-            animation: carousel 15s infinite cubic-bezier(0.77, 0, 0.175, 1) forwards;
-  }
-  .icon-cards__content.step-animation {
-    -webkit-animation: carousel 13s infinite steps(1) forwards;
-            animation: carousel 13s infinite steps(1) forwards;
-  }
-  .icon-cards__item {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 60vw;
-    height: 40vw;
-    max-width: 380px;
-    max-height: 250px;
-    transform-origin: center;
-  }
-  .icon-cards__item:nth-child(1) {
-    transform: rotateY(0) translateZ(35vw);
-  }
-  .icon-cards__item:nth-child(2) {
-    transform: rotateY(120deg) translateZ(35vw);
-  }
-  .icon-cards__item:nth-child(3) {
-    transform: rotateY(240deg) translateZ(35vw);
-  }
-  
-  @-webkit-keyframes carousel {
-    0%, 17.5% {
-      transform: translateZ(-35vw) rotateY(0);
-    }
-    27.5%, 45% {
-      transform: translateZ(-35vw) rotateY(-120deg);
-    }
-    55%, 72.5% {
-      transform: translateZ(-35vw) rotateY(-240deg);
-    }
-    82.5%, 100% {
-      transform: translateZ(-35vw) rotateY(-360deg);
-    }
-  }
-  
-  @keyframes carousel {
-    0%, 17.5% {
-      transform: translateZ(-35vw) rotateY(0);
-    }
-    27.5%, 45% {
-      transform: translateZ(-35vw) rotateY(-120deg);
-    }
-    55%, 72.5% {
-      transform: translateZ(-35vw) rotateY(-240deg);
-    }
-    82.5%, 100% {
-      transform: translateZ(-35vw) rotateY(-360deg);
-    }
-  }
-  
-
-  
-  @-webkit-keyframes jelly {
-    from {
-      transform: scale(1, 1);
-    }
-    30% {
-      transform: scale(1.25, 0.75);
-    }
-    40% {
-      transform: scale(0.75, 1.25);
-    }
-    50% {
-      transform: scale(1.15, 0.85);
-    }
-    65% {
-      transform: scale(0.95, 1.05);
-    }
-    75% {
-      transform: scale(1.05, 0.95);
-    }
-    to {
-      transform: scale(1, 1);
-    }
-  }
-  
-  @keyframes jelly {
-    from {
-      transform: scale(1, 1);
-    }
-    30% {
-      transform: scale(1.25, 0.75);
-    }
-    40% {
-      transform: scale(0.75, 1.25);
-    }
-    50% {
-      transform: scale(1.15, 0.85);
-    }
-    65% {
-      transform: scale(0.95, 1.05);
-    }
-    75% {
-      transform: scale(1.05, 0.95);
-    }
-    to {
-      transform: scale(1, 1);
-    }
-  }
